NetBSD Problem Report #58778
From nick@vf2.localdomain Sat Oct 26 15:58:52 2024
Return-Path: <nick@vf2.localdomain>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
key-exchange X25519 server-signature RSA-PSS (2048 bits)
client-signature RSA-PSS (2048 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id 2C76C1A923D
for <gnats-bugs@gnats.NetBSD.org>; Sat, 26 Oct 2024 15:58:52 +0000 (UTC)
Message-Id: <20241026165254.673FC3FE30@vf2.localdomain>
Date: Sat, 26 Oct 2024 16:52:54 +0000 (UTC)
From: skrll@netbsd.org
Reply-To: skrll@netbsd.org
To: gnats-bugs@NetBSD.org
Subject: mDNS spams console with recent kernel
X-Send-Pr-Version: 3.95
>Number: 58778
>Category: lib
>Synopsis: mDNS spams console with recent build
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: lib-bug-people
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sat Oct 26 16:00:00 +0000 2024
>Closed-Date: Wed Oct 01 18:51:17 +0000 2025
>Last-Modified: Wed Oct 01 18:51:17 +0000 2025
>Originator: Nick Hudson
>Release: NetBSD 10.99.12
>Organization:
sofa code ltd.
>Environment:
System: NetBSD vf2 10.99.12 NetBSD 10.99.12 (GENERIC64) #236: Sat Oct 26 14:34:38 BST 2024 nick@thinkbook:/home/nick/netbsd/nick-riscv/obj.riscv64/sys/arch/riscv/compile/GENERIC64 riscv
Architecture: riscv64
Machine: riscv
>Description:
Console spammed with
Oct 26 16:51:17 vf2 mDNSResponder: mDNS_Execute: SendQueries didn't send all its probes (2142146739 - 2142146739 = 0) will try again in one second
Oct 26 16:51:17 vf2 mDNSResponder: mDNS_Execute: SendResponses didn't send all its responses; will try again in one second
>How-To-Repeat:
Run NetBSD -current?
>Fix:
No idea.
>Release-Note:
>Audit-Trail:
From: Nick Hudson <nick.hudson@gmx.co.uk>
To: gnats-bugs@netbsd.org, lib-bug-people@netbsd.org, gnats-admin@netbsd.org,
netbsd-bugs@netbsd.org
Cc:
Subject: Re: lib/58778: mDNS spams console with recent kernel
Date: Tue, 2 Sep 2025 07:47:44 +0100
This is a multi-part message in MIME format.
--------------dq5XauE91JbkQcYV09nFPXtM
Content-Type: text/plain; charset=UTF-8; format=flowed
Content-Transfer-Encoding: 7bit
On 26/10/2024 17:00, skrll@netbsd.org wrote:
>> Number: 58778
This restores the previous default of logging off
Commit?
Nick
--------------dq5XauE91JbkQcYV09nFPXtM
Content-Type: text/x-patch; charset=UTF-8; name="mdns.diff"
Content-Disposition: attachment; filename="mdns.diff"
Content-Transfer-Encoding: base64
Y29tbWl0IGJiZDg5ODJmMDdhNGFhMzExNzlhZWQ4ZmM1MjBmYjBjZjdiZTEwMmUKQXV0aG9y
OiBOaWNrIEh1ZHNvbiA8c2tybGxAbmV0YnNkLm9yZz4KRGF0ZTogICBNb24gRmViIDEwIDEz
OjIxOjQ0IDIwMjUgKzAwMDAKCiAgICBtZG5zOiBkaXNhYmxlIGxvZ2dpbmcgYnkgZGVmYXVs
dC4KCmRpZmYgLS1naXQgYS9leHRlcm5hbC9hcGFjaGUyL21ETlNSZXNwb25kZXIvZGlzdC9t
RE5TUG9zaXgvUG9zaXhEYWVtb24uYyBiL2V4dGVybmFsL2FwYWNoZTIvbUROU1Jlc3BvbmRl
ci9kaXN0L21ETlNQb3NpeC9Qb3NpeERhZW1vbi5jCmluZGV4IDQxZDRkOWUxZmQ1My4uNmQ5
NGI4ZWFkYmFmIDEwMDY0NAotLS0gYS9leHRlcm5hbC9hcGFjaGUyL21ETlNSZXNwb25kZXIv
ZGlzdC9tRE5TUG9zaXgvUG9zaXhEYWVtb24uYworKysgYi9leHRlcm5hbC9hcGFjaGUyL21E
TlNSZXNwb25kZXIvZGlzdC9tRE5TUG9zaXgvUG9zaXhEYWVtb24uYwpAQCAtMTk3LDggKzE5
Nyw4IEBAIGludCBtYWluKGludCBhcmdjLCBjaGFyICoqYXJndikKIAogICAgIFBhcnNlQ21k
TGluZUFyZ3MoYXJnYywgYXJndik7CiAKLSAgICAvLyBFbmFibGUgbUROU1Jlc3BvbmRlciBs
b2dnaW5nIGJ5IGRlZmF1bHQuCi0gICAgbUROU19Mb2dnaW5nRW5hYmxlZCA9IG1ETlN0cnVl
OworICAgIC8vIERpc2FibGUgbUROU1Jlc3BvbmRlciBsb2dnaW5nIGJ5IGRlZmF1bHQuCisg
ICAgbUROU19Mb2dnaW5nRW5hYmxlZCA9IG1ETlNmYWxzZTsKIAogICAgIExvZ0luZm8oIiVz
IHN0YXJ0aW5nIiwgbUROU1Jlc3BvbmRlclZlcnNpb25TdHJpbmcpOwogCg==
--------------dq5XauE91JbkQcYV09nFPXtM--
From: Christos Zoulas <christos@zoulas.com>
To: gnats-bugs@netbsd.org
Cc: lib-bug-people@netbsd.org,
gnats-admin@netbsd.org,
netbsd-bugs@netbsd.org,
skrll@netbsd.org
Subject: Re: lib/58778: mDNS spams console with recent kernel
Date: Fri, 5 Sep 2025 18:50:26 -0400
--Apple-Mail=_8D3A54DA-552F-40D9-911F-7321F8CFAC55
Content-Transfer-Encoding: 7bit
Content-Type: text/plain;
charset=us-ascii
Commit it!
christos
--Apple-Mail=_8D3A54DA-552F-40D9-911F-7321F8CFAC55
Content-Transfer-Encoding: 7bit
Content-Disposition: attachment;
filename=signature.asc
Content-Type: application/pgp-signature;
name=signature.asc
Content-Description: Message signed with OpenPGP
-----BEGIN PGP SIGNATURE-----
Comment: GPGTools - http://gpgtools.org
iF0EARECAB0WIQS+BJlbqPkO0MDBdsRxESqxbLM7OgUCaLtpMgAKCRBxESqxbLM7
OtITAJ9qxEwIf9A0etAZZltPEQT9uOVzogCgmpBLsO+I310AC/L/P3el5pPd4Zo=
=LpAX
-----END PGP SIGNATURE-----
--Apple-Mail=_8D3A54DA-552F-40D9-911F-7321F8CFAC55--
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/58778 CVS commit: src/external/apache2/mDNSResponder/dist/mDNSPosix
Date: Sat, 6 Sep 2025 07:16:28 +0000
Module Name: src
Committed By: skrll
Date: Sat Sep 6 07:16:28 UTC 2025
Modified Files:
src/external/apache2/mDNSResponder/dist/mDNSPosix: PosixDaemon.c
Log Message:
PR/58778: mDNS spams console with recent build
Default to logging off.
OK christos
To generate a diff of this commit:
cvs rdiff -u -r1.19 -r1.20 \
src/external/apache2/mDNSResponder/dist/mDNSPosix/PosixDaemon.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->pending-pullups
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Mon, 29 Sep 2025 06:42:02 +0000
State-Changed-Why:
[pullup-11 #39] PR/58778: mDNS spams console with recent build
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/58778 CVS commit: [netbsd-11] src/external/apache2/mDNSResponder/dist/mDNSPosix
Date: Wed, 1 Oct 2025 16:56:51 +0000
Module Name: src
Committed By: martin
Date: Wed Oct 1 16:56:50 UTC 2025
Modified Files:
src/external/apache2/mDNSResponder/dist/mDNSPosix [netbsd-11]:
PosixDaemon.c
Log Message:
Pull up following revision(s) (requested by skrll in ticket #39):
external/apache2/mDNSResponder/dist/mDNSPosix/PosixDaemon.c: revision 1.20
PR/58778: mDNS spams console with recent build
Default to logging off.
OK christos
To generate a diff of this commit:
cvs rdiff -u -r1.19 -r1.19.2.1 \
src/external/apache2/mDNSResponder/dist/mDNSPosix/PosixDaemon.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: pending-pullups->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Wed, 01 Oct 2025 18:51:17 +0000
State-Changed-Why:
pullup done.
>Unformatted:
Sources based on
commit 36437b2561c4a1393db5ed451757183a54d81467
Author: skrll <skrll@NetBSD.org>
Date: Thu Oct 24 12:03:16 2024 +0000
risc-v: (re-) add the usb nodes for beagle-v.
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2025
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.