Pull up following revision(s) (requested by skrll in ticket #39):

external/apache2/mDNSResponder/dist/mDNSPosix/PosixDaemon.c: revision 1.20

PR/58778: mDNS spams console with recent build

Default to logging off.

OK christos